[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/SupportScenes/MenuButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://Resources/Fonts/MTCORSVA.TTF" type="DynamicFontData" id=2]
[ext_resource path="res://Scripts/Main_Menu.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 180
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[node name="Main_Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 1, 1, 0.784314 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 50.0
margin_right = -50.0
margin_bottom = -50.0

[node name="Title_Container" type="VBoxContainer" parent="VBoxContainer"]
margin_right = 1820.0
margin_bottom = 200.0

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/Title_Container"]
margin_right = 1820.0
margin_bottom = 200.0
rect_min_size = Vector2( 1820, 200 )
theme = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[center]Card Wars[/center]"
text = "Card Wars"

[node name="Button_Container" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 204.0
margin_right = 1820.0
margin_bottom = 980.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="Quick Play" parent="VBoxContainer/Button_Container" instance=ExtResource( 1 )]
margin_top = 78.0
margin_bottom = 178.0
focus_neighbour_top = NodePath("../Exit")
focus_neighbour_bottom = NodePath("../Campaign")
focus_next = NodePath("../Campaign")
focus_previous = NodePath("../Exit")
focus_mode = 1
text = "Quick Play"
arrow_margin_from_center = 130

[node name="Campaign" parent="VBoxContainer/Button_Container" instance=ExtResource( 1 )]
margin_top = 182.0
margin_bottom = 282.0
focus_neighbour_top = NodePath("../Quick Play")
focus_neighbour_bottom = NodePath("../Deck Editor")
focus_next = NodePath("../Deck Editor")
focus_previous = NodePath("../Quick Play")
focus_mode = 1
text = "Campaign"
arrow_margin_from_center = 130

[node name="Deck Editor" parent="VBoxContainer/Button_Container" instance=ExtResource( 1 )]
margin_top = 286.0
margin_bottom = 386.0
focus_neighbour_top = NodePath("../Campaign")
focus_neighbour_bottom = NodePath("../Options")
focus_next = NodePath("../Options")
focus_previous = NodePath("../Campaign")
focus_mode = 1
text = "Deck Editor"
arrow_margin_from_center = 145

[node name="Options" parent="VBoxContainer/Button_Container" instance=ExtResource( 1 )]
margin_top = 390.0
margin_bottom = 490.0
focus_neighbour_top = NodePath("../Deck Editor")
focus_neighbour_bottom = NodePath("../Credits")
focus_next = NodePath("../Credits")
focus_previous = NodePath("../Deck Editor")
focus_mode = 1
text = "Options"

[node name="Credits" parent="VBoxContainer/Button_Container" instance=ExtResource( 1 )]
margin_top = 494.0
margin_bottom = 594.0
focus_neighbour_top = NodePath("../Options")
focus_neighbour_bottom = NodePath("../Exit")
focus_next = NodePath("../Exit")
focus_previous = NodePath("../Options")
focus_mode = 1
text = "Credits"
arrow_margin_from_center = 90

[node name="Exit" parent="VBoxContainer/Button_Container" instance=ExtResource( 1 )]
margin_top = 598.0
margin_bottom = 698.0
focus_neighbour_top = NodePath("../Credits")
focus_neighbour_bottom = NodePath("../Quick Play")
focus_next = NodePath("../Quick Play")
focus_previous = NodePath("../Credits")
focus_mode = 1
text = "Exit"
arrow_margin_from_center = 70

[connection signal="pressed" from="VBoxContainer/Button_Container/Quick Play" to="." method="_On_Quick_Play_Pressed"]
[connection signal="pressed" from="VBoxContainer/Button_Container/Campaign" to="." method="_On_Campaign_Pressed"]
[connection signal="pressed" from="VBoxContainer/Button_Container/Deck Editor" to="." method="_On_Deck_Editor_Pressed"]
[connection signal="pressed" from="VBoxContainer/Button_Container/Options" to="." method="_On_Options_Pressed"]
[connection signal="pressed" from="VBoxContainer/Button_Container/Credits" to="." method="_On_Credits_Pressed"]
[connection signal="pressed" from="VBoxContainer/Button_Container/Exit" to="." method="_On_Exit_Pressed"]
